tests/snapshots/help_snapshots__noun_help@ascii.snap
---
source: tests/help_snapshots.rs
expression: out
---
ASCII art rendering (figlet standard font)

Usage: ubertool ascii [OPTIONS] <COMMAND>

Commands:
  draw  Render text as ASCII art using the figlet standard font
  help  Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
