tests/snapshots/help_snapshots__noun_help@bcrypt.snap
---
source: tests/help_snapshots.rs
expression: out
---
Bcrypt password hashing and verification

Usage: ubertool bcrypt [OPTIONS] <COMMAND>

Commands:
  hash    Hash a password using bcrypt
  verify  Verify a password against a bcrypt hash
  help    Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
