tests/snapshots/help_snapshots__noun_help@case.snap
---
source: tests/help_snapshots.rs
expression: out
---
String case conversion (snake/kebab/camel/pascal/etc.)

Usage: ubertool case [OPTIONS] <COMMAND>

Commands:
  convert  Convert a string between case styles
  help     Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
