tests/snapshots/help_snapshots__noun_help@cipher.snap
---
source: tests/help_snapshots.rs
expression: out
---
Authenticated encryption and decryption (AES-256-GCM / ChaCha20-Poly1305 + Argon2id / PBKDF2)

Usage: ubertool cipher [OPTIONS] <COMMAND>

Commands:
  encrypt  Encrypt input with password-derived AEAD
  decrypt  Decrypt input produced by `cipher encrypt`
  help     Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
