tests/snapshots/help_snapshots__noun_help@crontab.snap
---
source: tests/help_snapshots.rs
expression: out
---
Crontab expression utilities (describe, next)

Usage: ubertool crontab [OPTIONS] <COMMAND>

Commands:
  describe  Describe a crontab expression in plain English
  next      Emit the next N matching timestamps
  help      Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
