tests/snapshots/help_snapshots__noun_help@csv.snap
---
source: tests/help_snapshots.rs
expression: out
---
CSV to JSON conversion

Usage: ubertool csv [OPTIONS] <COMMAND>

Commands:
  to-json  Convert CSV to JSON (header row becomes object keys)
  help     Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
