tests/snapshots/help_snapshots__noun_help@docker-run.snap
---
source: tests/help_snapshots.rs
expression: out
---
Convert `docker run` command to docker-compose YAML

Usage: ubertool docker-run [OPTIONS] <COMMAND>

Commands:
  to-compose  Convert a `docker run` command to a docker-compose service entry
  help        Print this message or the help of the given subcommand(s)

Options:
      --json     Output as JSON to stdout. Human messages still go to stderr
  -q, --quiet    Bare values only (pipe-friendly)
  -v, --verbose  Verbose progress to stderr
  -h, --help     Print help
  -V, --version  Print version
